[package]
name = "nmea-slimline"
version = "0.1.0"
authors = ["Felix Obenhuber <felix@obenhuber.de>", "Evgeniy A. Dushistov <dushistov@mail.ru>", "eta <hi@theta.eu.org>"]
description = "Simple NMEA 0183 parser"
documentation = "https://docs.rs/nmea/"
homepage = "https://github.com/Dushistov/rust-nmea"
license = "Apache-2.0"
keywords = ["NMEA", "gps", "glonass", "coordinate", "position", "no_std"]

[dependencies]
nom = { version = "4.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
quickcheck = "0.4"
approx = "0.1.1"
